--- a/src/styles/styles-principal.css
+++ b/src/styles/styles-principal.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
    
   
-    background: #000000;
+    background: #000000 !important;
     color: white;
    
     
@@ -467,11 +467,11 @@ background: #141414;
     
     background: transparent;
     border:1px solid white;
-    border-radius: 40px;
+    border-radius: 10px;
     margin: 0px auto;
     justify-content: center;
     align-items: center;
-    font-size: 25px;
+    font-size: 20px;
     transition: all 4ms;
     cursor: pointer;
     margin-top: 40px;
@@ -480,6 +480,10 @@ background: #141414;
 .flecha3-btn a {
     color: white;
     text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 45px;
 }
 
 .flecha3-btn:hover {
