--- a/src/styles/styles-sing-in.css
+++ b/src/styles/styles-sing-in.css
@@ -226,7 +226,7 @@ body {
     .btn-text {
         position: relative;
         float: right;
-        margin: -29px 40px 0 0;
+        margin: -29px 22px 0 0;
         color:  white;
         font-size: 18px;
         letter-spacing: 0.2px;
@@ -250,4 +250,25 @@ body {
     margin-left: 0px !important;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
+}
+
+.btn-home {
+    width: 110px;
+    font-size: 15px;
+    font-weight: 900;
+  position: absolute;
+  margin-left: 215px;
+  margin-top: -680px;
+
+
+   
+}
+
+.btn-home a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+    color: white;
+    line-height: 40px;
 }
