--- a/src/styles/styles-sing-up.css
+++ b/src/styles/styles-sing-up.css
@@ -219,7 +219,7 @@ body {
     .btn-text-1 {
         position: relative;
         float: right;
-        margin: -29px 40px 0 0;
+        margin: -29px 22px 0 0;
         color:  white;
         font-size: 18px;
         letter-spacing: 0.2px;
@@ -244,3 +244,25 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
 } 
+
+.btn-home-1 {
+    width: 110px;
+    font-size: 15px;
+    font-weight: 900;
+/* display: flex; */
+  position: absolute;
+  margin-left: 215px;
+  margin-top: -680px;
+
+
+    /* display: flex; */
+}
+
+.btn-home-1 a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+    color: white;
+    line-height: 40px;
+}
